--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,5 @@
-main.file=prueba_qytetet.rb
+javac.classpath=
+main.file=interfaz_textual/controlador_qytetet.rb
 platform.active=default
 source.encoding=UTF-8
 spec.src.dir=spec
